names in backlog panel are truncated to ensure each row is exactly 35px tall.

--- a/src/client/assets/stylesheets/asset-list.less
+++ b/src/client/assets/stylesheets/asset-list.less
@@ -1,3 +1,5 @@
+@nameWidth: ~"100% - 15px";
+
 table.grid {
     table-layout: fixed;
     width: 100%;
@@ -85,7 +87,13 @@ table.grid {
                 }
 
                 &.name {
-                    word-break: break-all;
+                    div {
+                        height: 20px;
+                        overflow: hidden;
+                        text-overflow: ellipsis;
+                        width: calc(@nameWidth);
+                        white-space: nowrap;
+                    }
                 }
 
                 &.select-arrow,
